adicionando autenticação básica