@@ -1,6 +1,7 @@
 package com.felip.rbac.security;
 
 import com.auth0.jwt.JWT;
+import com.auth0.jwt.JWTVerifier;
 import com.auth0.jwt.algorithms.Algorithm;
 import com.auth0.jwt.exceptions.JWTVerificationException;
 import com.auth0.jwt.interfaces.DecodedJWT;
@@ -9,45 +10,63 @@ import org.springframework.security.core.GrantedAuthority;
 import org.springframework.security.core.userdetails.UserDetails;
 import org.springframework.stereotype.Service;
 
+import java.time.Duration;
+import java.time.Instant;
 import java.util.Date;
 import java.util.List;
-import java.util.stream.Collectors;
+import java.util.UUID;
 
 @Service
 public class JwtService {
 
-    @Value("${jwt.secret}")
-    private String secret;
+    private final long expiration;
+    private final String issuer;
+    private final Algorithm algorithm;
+    private final JWTVerifier verifier;
 
-    @Value("${jwt.expiration}")
-    private Long expiration;
+    public JwtService(@Value("${jwt.secret}") String secret, @Value("${jwt.expiration}") long expiration, @Value("${jwt.issuer}") String issuer) {
+        if (expiration <= 0) {
+            throw new IllegalArgumentException("A expiração do JWT deve ser maior que zero");
+        }
+        this.expiration = expiration;
+        this.issuer = issuer;
+        this.algorithm = Algorithm.HMAC256(secret);
+        this.verifier = JWT.require(algorithm)
+                .withIssuer(issuer)
+                .build();
+    }
 
     public String generateToken(UserDetails userDetails) {
-        Algorithm algorithm = Algorithm.HMAC256(secret);
+        Instant issuedAt = Instant.now();
+        Instant expiresAt = issuedAt.plusMillis(expiration);
 
         List<String> roles = userDetails.getAuthorities().stream()
                 .map(GrantedAuthority::getAuthority)
-                .collect(Collectors.toList());
+                .sorted()
+                .toList();
 
         return JWT.create()
+                .withJWTId(UUID.randomUUID().toString())
+                .withIssuer(issuer)
                 .withSubject(userDetails.getUsername())
                 .withClaim("roles", roles)
-                .withIssuedAt(new Date())
-                .withExpiresAt(new Date(System.currentTimeMillis() + expiration))
+                .withIssuedAt(Date.from(issuedAt))
+                .withExpiresAt(Date.from(expiresAt))
                 .sign(algorithm);
     }
 
     public String validateTokenAndGetSubject(String token) {
         try {
-            Algorithm algorithm = Algorithm.HMAC256(secret);
+            DecodedJWT decodedJWT = verifier.verify(token);
+            String subject = decodedJWT.getSubject();
 
-            DecodedJWT decodedJWT = JWT.require(algorithm)
-                    .build()
-                    .verify(token);
-
-            return decodedJWT.getSubject();
+            return subject == null || subject.isBlank() ? null : subject;
         } catch (JWTVerificationException exception) {
             return null;
         }
+    }
+
+    public long getExpirationSeconds() {
+        return Duration.ofMillis(expiration).toSeconds();
     }
 }
